syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package ="github.com/kirillmc/chat-server/pkg/chat_v1;chat_v1";

service ChatV1{
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(CreateRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SenMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest{
  repeated string usernames = 1;
}

message CreateResponse{
  int64 id = 1;
}

message DeleteRequest{
  int64 id = 1;
}

message SenMessageRequest{
  string form = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}